[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/segment_turret.gd" type="Script" id=1]
[ext_resource path="res://scenes/worm/segments/deployable/deployable.tscn" type="PackedScene" id=2]
[ext_resource path="res://textures/worm/muzzle_exp.png" type="Texture" id=3]
[ext_resource path="res://scenes/bullets/bullet.tscn" type="PackedScene" id=4]
[ext_resource path="res://textures/worm/turret.png" type="Texture" id=5]
[ext_resource path="res://textures/worm/segment.png" type="Texture" id=6]
[ext_resource path="res://sprite.tscn" type="PackedScene" id=8]


[sub_resource type="CircleShape2D" id=1]

[node name="segment" instance=ExtResource( 2 )]
script = ExtResource( 1 )
bullet_scene = ExtResource( 4 )
reload_speed = 0.2
bullet_speed = 1000

[node name="base" parent="." index="1" instance=ExtResource( 8 )]
texture = ExtResource( 6 )

[node name="turret" type="Sprite" parent="." index="5"]
z_index = 1
texture = ExtResource( 5 )
offset = Vector2( 9.5, 0 )

[node name="muzzle" type="Position2D" parent="turret" index="0"]
position = Vector2( 40, 0 )

[node name="muzzle_exp" type="Sprite" parent="turret" index="1"]
visible = false
position = Vector2( 68, 0 )
z_index = 1
texture = ExtResource( 3 )

[node name="view" type="Area2D" parent="." index="6"]
monitoring = false
monitorable = false

[node name="shape" type="CollisionShape2D" parent="view" index="0"]
shape = SubResource( 1 )

[node name="reload_timer" type="Timer" parent="." index="7"]
one_shot = true
[connection signal="timeout" from="reload_timer" to="." method="_on_reload_timer_timeout"]
